# pulsar_demo

./: .gitignore  Dockerfile  Dockerfile_fastapi  Dockerfile_jupyter  README.md  class_Legendary_model.pkl  docker-compose.yaml  docker-compose.yaml.bak  execute_cron_nb.sh  metric_compute.ipynb  metric_compute_nb.ipynb  metric_compute_nb_backup.ipynb  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
dashboards/metrics/: drift_detail_metrics.json  drift_metrics.json  drift_summary_metrics.json  roi_dashboard.json
datasets/: bank_num.csv  dataframe_client (1).csv:Zone.Identifier  kidney_test (1).csv:Zone.Identifier  kidney_test (2).csv:Zone.Identifier  kidney_test.csv  test_data_no_class.csv
docker/influxdb/: Dockerfile  influxdb.sh
env_files/: grafana.env  influxv2.env
grafana-provisioning/dashboards/: automatic.yml  drift_dashboard.json  drift_detail_dashboard.json  drift_summary_dashboard.json  roi_dashboard.json
grafana-provisioning/datasources/: automatic.yml
models/: bank_generator.pkl  bank_ordinal_encoder.pkl  class_default_model.pkl  kidney_disease.pkl  pokemon_generator.pkl
notebooks/: Untitled.ipynb  class_Legendary_model.pkl  pulsar_data_collection-0.0.0-py3-none-any.whl  pulsar_demo.ipynb
src/: app.py  class_Legendary_model.pkl  cloudbuild.yaml  compute_metrics_script.py  exploring_data_generation.ipynb  fake_data_script.py  gen_data_and_simulate_drift.py  main.py  model_training_script.py  roi.py  roi_backend.py  training_script.py
(+5 files in other folders)
