[tool.poetry]
name = "pulsar-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pulsar_demo"}]

[tool.poetry.dependencies]
python = "3.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
