[tool.poetry]
name = "pulsar-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pulsar_demo"}]

[tool.poetry.dependencies]
python = "3.9.6"
pandas = "1.3"
copulas = "^0.9.1"
sklearn = "^0.0.post7"
scikit-learn = "^1.3.0"
catboost = "1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
